--- a/React/02. State/two_types_of_converter.html
+++ b/React/02. State/two_types_of_converter.html
@@ -55,20 +55,65 @@
     );
   };
   function KmToMiles() {
-    return <h3>KM 2 M</h3>;
-  }
-  function App() {
-    const [index, setIndex] = React.useState(0);
-    const onSelect = (event) => {
-      console.log(event);
+    const [length, setLength] = React.useState(0);
+    const [inverted, setInverted] = React.useState(false);
+
+    const onChange = (event) => {
+      setLength(event.target.value);
     }
+    const reset = () => setLength(0);
+    const onInvert = () => {
+      reset();
+      setInverted((current) => !current);
+    }
+
     return (
       <div>
-        <h1 className="hi">Super Converter</h1>
-        <select>
+        <div>
+          <label htmlFor="km">KM</label>
+          <input
+            value={inverted ? length * 1.609 : length}
+            id="km"
+            placeholder="KM"
+            type="number"
+            onChange={onChange}
+            disabled={inverted}
+          />
+        </div>
+        <div>
+          <label htmlFor="mile">Mile</label>
+          <input 
+            value={inverted ? length : length / 1.609 }
+            id="mile"
+            placeholder="Mile"
+            type="number" 
+            onChange={onChange}
+            disabled={!inverted}
+          />
+        </div>
+        <button onClick={reset}>Reset</button>
+        <button onClick={onInvert}>{inverted ? "Turn router" : "Invert"}</button>
+      </div>
+    );
+  };
+  function App() {
+    const [index, setIndex] = React.useState("xx");
+    const onSelect = (event) => {
+      setIndex(event.target.value);
+    };
+    console.log("render w/", index);
+    return (
+      <div>
+        <h1>Super Converter</h1>
+        <select value={index} onChange={onSelect}>
+          <option value="xx">Select your units</option>
           <option value="0">Minutes & Hours</option>
           <option value="1">Km & Miles</option>
         </select>
+        <hr />
+        {index === "xx" ? "Please select your units" : null}
+        {index === "0" ? <MinutesToHours /> : null}
+        {index === "1" ? <KmToMiles /> : null}
       </div>
     );
   }
